reports/question-bank.log
Traceback (most recent call last):
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/shreyasprasad/miniforge3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# 152. Maximum Product Subarray


def maxProduct(nums):
    # if not nums:
    #     return 0
    # if len(nums) == 1:
    #     return nums[0]
    # dp = [0] * len(nums)
    # dp[0] = nums[0]
    # for i in range(1, len(nums)):
    #     if nums[i] < 0:
    #         dp[i] = dp[i-1] * nums[i]
    #     else:
    #         dp[i] = max(nums[i], dp[i-1] * nums[i])
    # return max(dp)
        

        

------------------

[0;36m  Input [0;32mIn [36][0;36m[0m
[0;31m    [0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (2553082203.py, line 19)

